--- a/paper/ancient_bibliography.bib
+++ b/paper/ancient_bibliography.bib
@@ -384,3 +384,50 @@
   publisher={Elsevier}
 }
 
+@article{skoglund2012origins,
+  title={Origins and genetic legacy of Neolithic farmers and hunter-gatherers in Europe},
+  author={Skoglund, Pontus and Malmstr{\"o}m, Helena and Raghavan, Maanasa and Stor{\aa}, Jan and Hall, Per and Willerslev, Eske and Gilbert, M Thomas P and G{\"o}therstr{\"o}m, Anders and Jakobsson, Mattias},
+  journal={Science},
+  volume={336},
+  number={6080},
+  pages={466--469},
+  year={2012},
+  publisher={American Association for the Advancement of Science}
+}
+
+@article{kousathanas2017inferring,
+  title={Inferring heterozygosity from ancient and low coverage genomes},
+  author={Kousathanas, Athanasios and Leuenberger, Christoph and Link, Vivian and Sell, Christian and Burger, Joachim and Wegmann, Daniel},
+  journal={Genetics},
+  volume={205},
+  number={1},
+  pages={317--332},
+  year={2017},
+  publisher={Genetics Soc America}
+}
+
+@article{jonsson2013mapdamage2,
+  title={mapDamage2. 0: fast approximate Bayesian estimates of ancient DNA damage parameters},
+  author={J{\'o}nsson, H{\'a}kon and Ginolhac, Aur{\'e}lien and Schubert, Mikkel and Johnson, Philip LF and Orlando, Ludovic},
+  journal={Bioinformatics},
+  volume={29},
+  number={13},
+  pages={1682--1684},
+  year={2013},
+  publisher={Oxford University Press}
+}
+
+@article{nielsen2003correcting,
+  title={Correcting for ascertainment biases when analyzing SNP data: applications to the estimation of linkage disequilibrium},
+  author={Nielsen, Rasmus and Signorovitch, James},
+  journal={Theoretical population biology},
+  volume={63},
+  number={3},
+  pages={245--255},
+  year={2003},
+  publisher={Elsevier}
+}
+
+
+
+
